add create new character

--- a/views/characters/index.ejs
+++ b/views/characters/index.ejs
@@ -11,7 +11,7 @@
 <body>
     <h1>Characters</h1>
     <div>
-        <a href="">Add a new Character</a>
+        <a href="/characters/new">Add a New Character</a>
     </div>
     <div>
         <ul>
