add edit character

--- a/views/characters/show.ejs
+++ b/views/characters/show.ejs
@@ -19,6 +19,7 @@
             <li>Equipment: <%= character.equipments[0] %></li>
         </ul>
     </div>
+    <a href="/characters/<%= character._id %>/edit">Edit Character</a>
     <a href="/characters">Characters</a>
 </body>
 
