--- a/views/characters/index.ejs
+++ b/views/characters/index.ejs
@@ -1,25 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
+<% layout('layouts/boilerplate') %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Characters - Fantaji</title>
-</head>
-
-<body>
-    <h1>Characters</h1>
-    <div>
-        <a href="/characters/new">Add a New Character</a>
+<h1>Characters</h1>
+<div>
+    <a class="btn btn-primary" href="/characters/new">Create a New Character</a>
+</div>
+<div class="row mt-3">
+    <% for (let character of characters) { %>
+    <div class="col-sm-4">
+        <div class="card">
+            <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                    <p><%= character.name %></p>
+                    <footer class="blockquote-footer">The <cite title="Class"><%= character.class %></cite>
+                    </footer>
+                </blockquote>
+                <div class="text-end">
+                    <a href="/characters/<%= character._id %>" class="btn btn-primary">View</a>
+                </div>
+            </div>
+        </div>
     </div>
-    <div>
-        <ul>
-            <% for (let character of characters) { %>
-            <li><a href="/characters/<%= character._id %>"><%= character.name %> - The <%= character.class %></a></li>
-            <% } %>
-        </ul>
-    </div>
-</body>
-
-</html>
+    <% } %>
+</div>
