--- a/views/characters/show.ejs
+++ b/views/characters/show.ejs
@@ -1,29 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
+<% layout('layouts/boilerplate') %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= character.name %> - Fantaji</title>
-</head>
-
-<body>
-    <h1>Character</h1>
-    <div>
-        <ul>
-            <li>Name: <%= character.name %></li>
-            <li>Race: <%= character.race %></li>
-            <li>Class: <%= character.class %></li>
-            <li>Alignment: <%= character.alignment %></li>
-            <li>Equipment: <%= character.equipments[0] %></li>
-        </ul>
+<div class="row">
+    <h1 class="text-center">Character</h1>
+    <div class="col-6 offset-3">
+        <table class="table table-primary table-striped table-bordered">
+            <tbody>
+                <tr>
+                    <th scope="row">Name</th>
+                    <td><%= character.name %></td>
+                </tr>
+                <tr>
+                    <th scope="row">Race</th>
+                    <td><%= character.race %></td>
+                </tr>
+                <tr>
+                    <th scope="row">Class</th>
+                    <td><%= character.class %></td>
+                </tr>
+                <tr>
+                    <th scope="row">Alignment</th>
+                    <td><%= character.alignment %></td>
+                </tr>
+                <tr>
+                    <th scope="row">Equipment</th>
+                    <td><%= character.equipments[0] %></td>
+                </tr>
+            </tbody>
+        </table>
+        <div class="text-center mb-1">
+            <a class="btn btn-success" href="/characters/<%= character._id %>/edit">Edit</a>
+            <form class="d-inline" action="/characters/<%= character._id %>?_method=DELETE" method="POST">
+                <button class="btn btn-danger">Delete</button>
+            </form>
+        </div>
+        <div class="text-center">
+            <a class="btn btn-primary" href="/characters">Characters</a>
+        </div>
     </div>
-    <a href="/characters/<%= character._id %>/edit">Edit Character</a>
-    <form action="/characters/<%= character._id %>?_method=DELETE" method="POST">
-        <button>Delete</button>
-    </form>
-    <a href="/characters">Characters</a>
-</body>
-
-</html>
+</div>
