--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,23 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+<% layout('layouts/boilerplate') %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index - Fantaji</title>
-</head>
-
-<body>
-    <div>
-        <h1>Fantaji</h1>
-        <p>Design your own world!</p>
-    </div>
-    <div>
-        <ul>
-            <li><a href="/characters">Characters</a></li>
-        </ul>
-    </div>
-</body>
-
-</html>
+<div>
+    <h1>Fantaji</h1>
+    <p>Design your own world!</p>
+</div>
+<div>
+    <ul>
+        <li><a href="/characters">Characters</a></li>
+    </ul>
+</div>
