--- a/views/characters/new.ejs
+++ b/views/characters/new.ejs
@@ -2,26 +2,26 @@
 <div class="row mb-3">
     <h1 class="text-center">Create a New Character</h1>
     <div class="col-6 offset-3">
-        <form action="/characters" method="POST">
+        <form action="/characters" method="POST" novalidate class="validated-form">
             <div class="mb-3">
                 <label class="form-label" for="name">Name</label>
-                <input class="form-control" type="text" id="name" name="character[name]">
+                <input class="form-control" type="text" id="name" name="character[name]" required>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="race">Race</label>
-                <input class="form-control" type="text" id="race" name="character[race]">
+                <input class="form-control" type="text" id="race" name="character[race]" required>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="class">Class</label>
-                <input class="form-control" type="text" id="class" name="character[class]">
+                <input class="form-control" type="text" id="class" name="character[class]" required>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="alignment">Alignment</label>
-                <input class="form-control" type="text" id="alignment" name="character[alignment]">
+                <input class="form-control" type="text" id="alignment" name="character[alignment]" required>
             </div>
             <div class="mb-3">
-                <label class="form-label" for="equipments">Equipment</label>
-                <input class="form-control" type="text" id="equipments" name="character[equipments]">
+                <label class="form-label" for="equipments">Equipments</label>
+                <input class="form-control" type="text" id="equipments" name="character[equipments][]">
             </div>
             <div class="mb-3">
                 <button class="btn btn-success">Create</button>
